<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bubble_background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_in_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back">

        <TextView
            android:id="@+id/sign_in_tv_tool_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sign_in_toolbar_text"
            android:textAppearance="@style/Theme.GroceryList.AppbarTitle" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_tool_bar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20"
            android:fontFamily="@font/nunito_sans_semi_bold"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_5dp"
            android:text="@string/sign_in_greeting_text"
            android:textColor="@color/dark_yellow"
            android:textSize="@dimen/_16sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20"
            android:layout_marginTop="@dimen/_60"
            android:layout_marginBottom="@dimen/_40"
            android:background="@color/ff_white"
            android:elevation="@dimen/_10"
            app:cardCornerRadius="@dimen/_10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_16">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8"
                    app:boxStrokeColor="@color/dark_yellow"
                    app:hintTextColor="@color/dark_yellow">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sign_in_et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/_16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sign_in_til_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8"
                    android:layout_marginBottom="@dimen/_8"
                    app:boxStrokeColor="@color/dark_yellow"
                    app:hintTextColor="@color/dark_yellow">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/sign_in_et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_sans_regular"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/dark_yellow"
                        android:textSize="@dimen/_16sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8"
                    android:layout_marginTop="@dimen/_15"
                    android:background="@drawable/horizontal_two_color_gradient"
                    android:fontFamily="@font/nunito_sans_bold"
                    android:foreground="?attr/selectableItemBackground"
                    android:paddingVertical="@dimen/_8"
                    android:text="@string/sign_in_toolbar_text"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_18sp"
                    app:backgroundTint="@null" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>